@@ -76,10 +76,10 @@ static void tobit_free (tobit_info *tobit)
     free(tobit->theta);
 }
 
-static int tobit_ll (double *theta, double **Z, tobit_info *tobit, 
+static int tobit_ll (double *theta, const double **X, double **Z, tobit_info *tobit, 
 		     int do_score)
 {
-    double *y = Z[1];
+    const double *y = X[1];
     double siginv = theta[tobit->k]; /* inverse of variance */
     double x, llt;
     int i, t;
@@ -88,7 +88,7 @@ static int tobit_ll (double *theta, double **Z, tobit_info *tobit,
     for (t=0; t<tobit->n; t++) {
 	tobit->ystar[t] = theta[0];
 	for (i=1; i<tobit->k; i++) {
-	    tobit->ystar[t] += theta[i] * Z[i+1][t];
+	    tobit->ystar[t] += theta[i] * X[i+1][t]; /* coeff * orig data */
 	}
 	tobit->e[t] = y[t] * siginv - tobit->ystar[t];
 	tobit->f[t] = siginv * normal_pdf(tobit->e[t]);
@@ -123,14 +123,14 @@ static int tobit_ll (double *theta, double **Z, tobit_info *tobit,
 	    
 	    for (i=0; i<=tobit->k; i++) {
 
-		/* indices into the Z data array */
-		gi = i + tobit->k + 1;
+		/* indices into the data arrays */
+		gi = i + 1;
 		xi = (i == 0)? 0 : i + 1;
 
 		if (y[t] == 0.0) {
 		    /* score if y is censored */
 		    if (xi <= tobit->k) {
-			Z[gi][t] = -den / tail * Z[xi][t];
+			Z[gi][t] = -den / tail * X[xi][t];
 		    } else {
 			Z[gi][t] = 0.0;
 		    } 
@@ -140,7 +140,7 @@ static int tobit_ll (double *theta, double **Z, tobit_info *tobit,
 		} else {
 		    /* score if y is not censored */
 		    if (xi <= tobit->k) {
-			x = Z[xi][t];
+			x = X[xi][t];
 		    } else {
 			x = -y[t];
 		    }
@@ -162,25 +162,45 @@ static int tobit_ll (double *theta, double **Z, tobit_info *tobit,
     return 0;
 }
 
-static int *make_regression_list (int ncoeff)
+/* construct a set of pointers into the original data set */
+
+static const double **make_tobit_X (const MODEL *pmod, const double **Z)
+{
+    const double **X;
+    int nv = pmod->list[0];
+    int offset = pmod->t1;
+    int v, i;
+
+    X = malloc(nv * sizeof *X);
+    if (X == NULL) return NULL;
+
+    X[0] = Z[0] + offset;
+    X[1] = Z[pmod->list[1]] + offset;
+
+    for (i=2; i<nv; i++) {
+	v = pmod->list[i + 1];
+#ifdef DEBUG
+	fprintf(stderr, "setting X[%d] -> Z[%d]\n", i, v);
+#endif
+	X[i] = Z[v] + offset;
+    }
+
+    return X;
+}
+
+static int *make_tobit_list (int k)
 {
     int *list;
     int i;
 
-    list = malloc((ncoeff + 3) * sizeof *list);
+    list = malloc((k + 2) * sizeof *list);
     if (list == NULL) return NULL;
 
-    list[0] = ncoeff + 1;
-    list[1] = 1; /* dep var */
-    list[2] = 0; /* intercept */
-
-    for (i=3; i<=list[0]; i++) {
-	list[i] = i - 1; /* indep vars */
+    list[0] = k + 1;
+    list[1] = 0;  /* dep var is the constant */
+    for (i=0; i<k; i++) {
+	list[i+2] = i + 1; 
     }
-
-#ifdef DEBUG
-    printlist(list, "initial OLS regression list");
-#endif
 
     return list;
 }
@@ -189,6 +209,7 @@ static void print_iter_info (double *theta, int m, double ll)
 {
     int i;
 
+    printf("\n*** theta and ll ***\n");
     for (i=0; i<m; i++) {
 	printf("%#12.5g ", theta[i]);
     }
@@ -212,13 +233,19 @@ static void print_tobit_stats (double *beta, int k, double sigma,
     printf("Log-likelihood = %#g\n", ll);    
 }
 
-static int do_tobit (double ***pZ, DATAINFO *pdinfo, tobit_info *tobit)
+static int do_tobit (int *list, double ***pZ, DATAINFO *pdinfo, 
+		     tobit_info *tobit, MODEL *pmod)
 {
     MODEL tmod;
-    int *list = NULL;
+
+    double **tZ = NULL;
+    DATAINFO *tinfo = NULL;
+
+    const double **X;
+    int *tlist = NULL;
     double *beta = NULL, *delta = NULL, *deltmp = NULL;
     double sigma;
-    int i, j, k = pdinfo->v - 1; /* minus the dep var */
+    int i, j, k;
     int err = 0;
 
     /* for VCV manipulation */
@@ -233,8 +260,15 @@ static int do_tobit (double ***pZ, DATAINFO *pdinfo, tobit_info *tobit)
     double convcrit = 1.0e20;
     double stepsize = 0.25;
 
-    tobit->n = pdinfo->n;
-    tobit->k = k;
+    /* run initial OLS */
+    *pmod = lsq(list, pZ, pdinfo, OLS, OPT_A, 0.0);
+    if (pmod->errcode) {
+	err = 1;
+	goto bailout;
+    }
+
+    tobit->n = pmod->nobs;
+    tobit->k = k = pmod->ncoeff;
 
     err = tobit_allocate(tobit);
     if (err) return 1;
@@ -246,55 +280,53 @@ static int do_tobit (double ***pZ, DATAINFO *pdinfo, tobit_info *tobit)
 	goto bailout;
     }
 
-    list = make_regression_list(k);
-    if (list == NULL) {
-	err = 1;
-	goto bailout;
-    }
-
     beta = tobit->theta;   /* point beta at the start of the theta array */
     tobit->theta[k] = 1.0; /* initialize variance */
 
-    /* initialize beta as OLS */
-    tmod = lsq(list, pZ, pdinfo, OLS, OPT_A, 0.0);
-    if (tmod.errcode) {
-	err = 1;
-	goto bailout;
-    }
+    /* initialize beta from OLS */
     for (i=0; i<k; i++) {
-	beta[i] = tmod.coeff[i];
+	beta[i] = pmod->coeff[i];
 #ifdef DEBUG
 	fprintf(stderr, "initial OLS beta[%d] = %#.5g\n", i, beta[i]);
 #endif
     }
-    clear_model(&tmod, NULL);
 
-    /* add k + 1 variables for the OPG regression */
-    if (dataset_add_vars(k + 1, pZ, pdinfo)) {
+    /* set of pointers into original data */
+    X = make_tobit_X(pmod, (const double **) *pZ);
+    if (X == NULL) {
+	err = 1;
+	goto bailout;
+    }
+
+    /* create a temp dataset for the OPG regression: 
+       k+1 vars plus constant */    
+    tinfo = create_new_dataset(&tZ, k + 2, tobit->n, 0);
+    if (tinfo == NULL) {
 	err = 1;
 	goto bailout;
     }
 
     /* OPG regression list */
-    list[0] += 1; /* one element longer than for initial OLS */
-    list[1] = 0;  /* dep var is the constant */
-    for (i=0; i<=k; i++) {
-	list[i+2] = i + k + 1;
+    tlist = make_tobit_list(k + 1);
+    if (tlist == NULL) {
+	err = 1;
+	goto bailout;
     }
 
-#ifdef DEBUG
-    printlist(list, "OPG regression list");
-#endif
+    printlist(tlist, "OPG regression list");
 
     while (convcrit > small) {
 
 	/* compute loglikelihood and score matrix */
-	tobit_ll(tobit->theta, *pZ, tobit, 1); 
+	tobit_ll(tobit->theta, X, tZ, tobit, 1); 
 
 	/* BHHH via OPG regression (OPT_A -> "this is an auxiliary regression") */
-	tmod = lsq(list, pZ, pdinfo, OLS, OPT_A, 0.0);
+	tmod = lsq(tlist, &tZ, tinfo, OLS, OPT_A, 0.0);
 
 	for (i=0; i<=k; i++) {
+#ifdef DEBUG
+	    printf("OPG coeff[%d] = %g\n", i, tmod.coeff[i]);
+#endif
 	    delta[i] = tmod.coeff[i] * stepsize;
 	    deltmp[i] = tobit->theta[i] + delta[i];
 	} 
@@ -302,7 +334,7 @@ static int do_tobit (double ***pZ, DATAINFO *pdinfo, tobit_info *tobit)
 	clear_model(&tmod, NULL);
 
 	/* see if we've gone up... (0 -> don't compute score) */
-	tobit_ll(deltmp, *pZ, tobit, 0); 
+	tobit_ll(deltmp, X, tZ, tobit, 0); 
 
 	while (tobit->ll2 < tobit->ll && stepsize > smallstep) { 
 	    /* ...if not, halve steplength, as with ARMA models */
@@ -311,7 +343,7 @@ static int do_tobit (double ***pZ, DATAINFO *pdinfo, tobit_info *tobit)
 		delta[i] *= 0.5;
 		deltmp[i] = tobit->theta[i] + delta[i];
 	    }
-	    tobit_ll(deltmp, *pZ, tobit, 0);
+	    tobit_ll(deltmp, X, tZ, tobit, 0);
 	}
 
 	/* double the steplength? */
@@ -336,8 +368,7 @@ static int do_tobit (double ***pZ, DATAINFO *pdinfo, tobit_info *tobit)
     }
 
     /* get estimate of variance matrix for Olsen parameters */
-    G = gretl_matrix_from_2d_array((const double **) &((*pZ)[tobit->k+1]), 
-				   tobit->n, tobit->k + 1);
+    G = gretl_matrix_from_2d_array((const double **) tZ + 1, tobit->n, tobit->k + 1);
     VCV = gretl_matrix_vcv(G);
     gretl_invert_symmetric_matrix(VCV);
     gretl_matrix_divide_by_scalar(VCV, tobit->n);
@@ -372,6 +403,8 @@ static int do_tobit (double ***pZ, DATAINFO *pdinfo, tobit_info *tobit)
 
     print_tobit_stats(beta, k, sigma, VCV, tobit->ll);
 
+    /* now write stats into pmod, for the caller */
+
     gretl_matrix_free(VCV);
 
  bailout:
@@ -379,6 +412,8 @@ static int do_tobit (double ***pZ, DATAINFO *pdinfo, tobit_info *tobit)
     free(delta);
     free(deltmp);
     free(list);
+    free_Z(tZ, tinfo);
+    free_datainfo(tinfo);
 
     return err;
 }
@@ -398,8 +433,10 @@ censored_frac (const double *y, const DATAINFO *pdinfo)
 
 int main (int argc, char *argv[])
 {
+    MODEL model;
     const char *datafile;
-    int err;
+    int i, err;
+    int *list;
 
     /* basic dataset apparatus */
     DATAINFO *pdinfo = NULL;
@@ -423,14 +460,24 @@ int main (int argc, char *argv[])
     printf("Perc. of censored observations = %.3f\n", 
 	   censored_frac(Z[1], pdinfo));
 
+    list = malloc((pdinfo->v + 1) * sizeof *list);
+    if (list == NULL) exit(EXIT_FAILURE);
+    list[0] = pdinfo->v;
+    list[1] = 1;
+    list[2] = 0;
+    for (i=3; i<=list[0]; i++) list[i] = i - 1;
+
+    printlist(list, "input list");
+
     /* do the actual analysis */
-    err = do_tobit(&Z, pdinfo, &tobit); 
+    err = do_tobit(list, &Z, pdinfo, &tobit, &model); 
 
     /* clean up (not really needed in a standalone program, but
        necessary to avoid memory leaks when this whole function is
        embedded in a larger program).
     */
 
+    free(list);
     tobit_free(&tobit);
     free_Z(Z, pdinfo);
     free_datainfo(pdinfo);
@@ -440,22 +487,19 @@ int main (int argc, char *argv[])
 
 #else
 
-MODEL tobit_model (int *list, double ***pZ, DATAINFO *pdinfo, 
-		   PRN *prn)
+MODEL tobit_estimate (int *list, double ***pZ, DATAINFO *pdinfo) 
 {
-    MODEL tmod; 
+    MODEL model;
     tobit_info tobit;
     int err;
 
-    err = do_tobit(pZ, pdinfo, &tobit); 
+    err = do_tobit(list, pZ, pdinfo, &tobit, &model); 
 
     tobit_free(&tobit);
 
     /* to be written!! */
 
-    gretl_model_init(&tmod, NULL);
-
-    return tmod;
+    return model;
 }
 
 #endif /* STANDALONE */
